--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
   --text-primary: #323233;
   --text-secondary: #575859;
   --text-hint: #a3a4a5;
+  --text-disabled: #a3a4a5;
   --text-theme-alt: #ffffff;
   --background: #ffffff;
   --theme: #8962d3;
